# nexretail

./: DEPLOY.md  package-lock.json  package.json
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  seed.py
backend/alembic/: env.py
backend/alembic/versions/: 8f0b303593ff_initial_7_table_schema_with_audit_.py
backend/app/: __init__.py  config.py  database.py  deps.py  main.py
backend/app/areas/: __init__.py  const.py  controller.py  model.py  schema.py  service.py
backend/app/behavior_events/: __init__.py  const.py  model.py  schema.py
backend/app/common/: __init__.py  exceptions.py  schema.py
backend/app/edge/: __init__.py  controller.py  schema.py  service.py
backend/app/entrances/: __init__.py  const.py  controller.py  model.py  schema.py  service.py
backend/app/products/: __init__.py  const.py  controller.py  model.py  schema.py  service.py
backend/app/stores/: __init__.py  const.py  controller.py  model.py  schema.py  service.py
backend/app/visitor_positions/: __init__.py  model.py
backend/app/visitor_sessions/: __init__.py  const.py  controller.py  model.py  schema.py  service.py
frontend/: .dockerignore  Dockerfile  NOTES.md  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/area/: page.tsx
frontend/src/app/customer/: page.tsx
frontend/src/app/entrance/: page.tsx
frontend/src/app/heatmap/: page.tsx
frontend/src/app/main/: page.tsx
frontend/src/app/overview/: page.tsx
frontend/src/lib/: api.ts  mock.ts  utils.ts
(+14 files in other folders)
