[project]
name = "nexretail-backend"
version = "0.1.0"
description = "Retail AI backend (Phase 1) — FastAPI + PostgreSQL"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.30",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "pydantic>=2.5",
  "pydantic-settings>=2.2",
  "python-jose[cryptography]>=3.3",
  "passlib[bcrypt]>=1.7",
  "python-multipart>=0.0.9",
  "psycopg2-binary>=2.9",
]

[tool.ruff]
line-length = 100
target-version = "py311"
